# PosixShell

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  exit_codes.h  main.c
src/IO_Backend/: Makefile.am  io.c  io.h
src/ast/: Makefile.am  ast.c  ast.h  ast_exec.c  ast_exec.h
src/functions/: Makefile.am  functions.c  functions.h  hash_functions.c  hash_functions.h  ll_functions.c  ll_functions.h
src/lexer/: Makefile.am  expansion.c  expansion.h  lexer.c  lexer.h  token.c  token.h
src/parser/: Makefile.am  parser.c  parser.h
src/variables/: Makefile.am  hash_variables.c  hash_variables.h  ll_variables.c  ll_variables.h  shell_variables.c  shell_variables.h  variables.c  variables.h
tests/: Makefile.am  testsuite.sh
tests/1-main/: file  stdin_from_file  stdin_from_string  stdin_from_string2  string  testsuite.sh
tests/2-Errors/: cd_test  for_err  syntax_test  testsuite.sh  unset_fun  unset_test
tests/3-Syntax/: comment_EOL  comment_tricky  compound_list2  if_command  if_command2  single_quote  single_quote_mixed  single_quote_tricky  testsuite.sh
tests/3-Syntax/dq/: dq_norm_var  dq_normal  dq_quote  dq_var  dq_var_bracket  escaping_dq  normal_dq  quote_dq  simple_dq  simple_dq_2  var_dq  var_dq_normal
tests/4-Builtins/: cat  dot_builtin  dot_builtin_2  dot_builtin_error  echo_e  echo_lf  echo_mult_args  echo_string  example.txt  exit_code0  exit_code255  exit_code42  exit_nocode  export_builtin  export_builtin_2  file_dot.sh  testsuite.sh
tests/5-Operators/: and_basic  and_chain  and_or  negation_double  negation_if  negation_if_fork  negation_pipe  negation_simple  or_basic  or_chain  pipe  testsuite.sh
tests/6-Loops/: for_break  for_continue  for_no_var_use  miscellaneous  testsuite.sh  until_break  until_true  while_break  while_false
tests/7-Variables/: assign_print_same_line  bad_variable1  bad_variable2  basic_var_print  brandone  command_var_1  command_var_2  dollar  empty  multiple_defs_on_line  null_var_assign  quote_var_1  reset_var  sharp  simple_var_bracket  simple_var_concat  testsuite.sh
tests/8-Redirection/: outside_redir_in_grep.txt  redir_app_out_cat  redir_app_out_echo  redir_app_out_ls  redir_function  redir_if  redir_in_grep  redir_multiple  redir_out_cat  redir_out_echo  redir_out_fd45_cat  redir_out_ls  redir_out_stderr_ls  redir_rw_grep  redir_rw_man  testsuite.sh
tests/9-Functions/: functions_call_same_line  functions_given_recursive  functions_no_args  functions_redefinition  functions_with_variables  functions_with_variables2  testsuite.sh
tests/A-Command_Blocks/: command_block_echo_tricky  command_block_pipe  command_block_redir  command_block_simple  testsuite.sh
tests/subshell/: subshell_test  testsuite.sh
